compiler/src/testsuite/extensions/modules/bad/bad_type.bl
use mod;

int main() {
    return mod::int_function(0.0);
}